# webwrench

./: .gitignore  CONTRIBUTING.md  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
dev/: webwrench-spec.md
docs/: architecture.html  examples.html  getting-started.html  index.html
docs/api/: charts.html  display.html  layout.html  server.html  widgets.html
docs/css/: style.css
docs/guides/: app-mode.html  charts.html  export.html  layout.html  script-mode.html  theming.html
docs/js/: nav.js
docs/migration/: from-gradio.html  from-streamlit.html
examples/: 01_hello_world.py  02_interactive_chart.py  03_multi_chart.py  04_dashboard.py  05_form_widgets.py  06_data_table.py  07_theming.py  08_static_export.py  09_multi_page_app.py  10_tabs_and_accordion.py  11_sidebar_nav.py  12_chart_datasets.py  13_dataframe_plot.py  14_live_updates.py  15_grid_layout.py  16_modal_dialog.py  README.md  index.html  report.html
scripts/: _helpers.sh  prerelease.sh  release.sh  start-release.sh
tests/: conftest.py  test_app.py  test_charts.py  test_context.py  test_coverage_gaps.py  test_display.py  test_export.py  test_init.py  test_layout.py  test_options.py  test_server.py  test_shell.py  test_state.py  test_taco.py  test_theme.py  test_widgets.py
webwrench/: __init__.py  _context.py  _shell.py  app.py  charts.py  display.py  export.py  layout.py  options.py  server.py  state.py  taco.py  theme.py  widgets.py
webwrench/_assets/: bitwrench.min.js  bwclient.js  chart.min.js  quikdown.min.js
