[project]
name = "webwrench"
version = "0.1.0"
description = "Python UI framework for interactive web dashboards and self-contained HTML reports, powered by bitwrench.js"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "BSD-2-Clause"}
authors = [
    {name = "Manu Chatterjee", email = "deftio@deftio.com"}
]
keywords = ["dashboard", "ui", "visualization", "html", "report", "charts"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/deftio/webwrench"
Documentation = "https://deftio.github.io/webwrench/"
Repository = "https://github.com/deftio/webwrench"
Issues = "https://github.com/deftio/webwrench/issues"

[project.optional-dependencies]
pandas = ["pandas>=1.5"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.5.0",
    "bandit>=1.7",
    "build>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["webwrench"]

[tool.hatch.build.targets.wheel.force-include]
"webwrench/_assets" = "webwrench/_assets"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["webwrench"]
omit = ["webwrench/_assets/*"]

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
